[ADD] main modal

--- a/crowdfunding-product-page-main/css/style.css
+++ b/crowdfunding-product-page-main/css/style.css
@@ -24,7 +24,9 @@ html {
 
 .header {
   height: 300px;
-  background: url("../assets/images/image-hero-mobile.jpg") center/cover no-repeat;
+  background: url("../assets/images/image-hero-mobile.jpg") center/cover no-repeat, -webkit-gradient(linear, left bottom, left top, from(rgba(0, 0, 0, 0)), to(black));
+  background: url("../assets/images/image-hero-mobile.jpg") center/cover no-repeat, linear-gradient(0deg, rgba(0, 0, 0, 0) 0%, black 100%);
+  background-blend-mode: multiply;
   padding: 32px 24px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -196,7 +198,7 @@ html {
   width: 30%;
   padding: 20px 0;
   margin: 20px auto;
-  border-top: 1px solid #160c0c80;
+  border-top: 1px solid #7a7a7a80;
   border-bottom: 1px solid #7a7a7a80;
 }
 
@@ -324,23 +326,124 @@ html {
 }
 
 .modal {
-  position: fixed;
+  position: absolute;
   z-index: 1;
   left: 0;
   top: 0;
   width: 100%;
-  height: 100%;
+  height: auto;
   background-color: rgba(0, 0, 0, 0.4);
   /* Black w/ opacity */
-  padding: 0 24px;
-  text-align: center;
-  display: none;
+  padding: 80px 24px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+.modal__content {
+  background-color: #fff;
+  padding: 36px 24px 0;
+  border-radius: 10px;
+}
+
+.modal__content .icon-close {
+  display: inline-block;
+  height: 14px;
+  width: 14px;
+  background: url("../assets/svg/icon-close-modal.svg") center/contain no-repeat;
+}
+
+.modal__content .title {
+  margin: 0 0 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 1.8rem;
+}
+
+.modal__cards {
+  padding: 25px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 24px;
+}
+
+.modal__cards .modal__card-content {
+  padding: 33px 24px;
+  border: 1px solid #d8d8d8;
+  border-radius: 8px;
+}
+
+.modal__cards .modal__card-content .card__header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 16px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.modal__cards .modal__card-content .card__header input[type=radio] {
+  height: 24px;
+  width: 24px;
+}
+
+.modal__cards .modal__card-content .card__header .sub-title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  font-size: 1.4rem;
+  line-height: 2.8rem;
+}
+
+.modal__cards .modal__card-content .card__header .sub-title span {
+  color: var(--moderate-cyan);
+}
+
+.modal__cards .modal__card-content .paragraph {
+  margin: 20px 0 0;
+}
+
+.modal__cards .modal__card-content .p-stats {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 11px;
+  font-size: 1.8rem;
+  font-weight: 700;
+  margin: 20px 0 0;
+}
+
+.modal__cards .modal__card-content .p-stats span {
+  color: var(--dark-gray);
+  font-weight: 400;
+  font-size: 1.6rem;
+}
+
+.modal__cards .modal__card-pledge {
+  display: none;
 }
 
 .not-scroll {
