--- a/crowdfunding-product-page-main/css/style.scss
+++ b/crowdfunding-product-page-main/css/style.scss
@@ -20,7 +20,7 @@
 
 html {
   font-size: 62.5%;
-  font-family: 'Commissioner', sans-serif;  
+  font-family: 'Commissioner', sans-serif;
   min-width: 320px;
   color: var(--black);
   position: relative;
@@ -30,7 +30,8 @@ html {
 .header {
   height: 300px;
   background: url('../assets/images/image-hero-mobile.jpg') center/cover
-    no-repeat;
+    no-repeat, linear-gradient(0deg, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 100%);
+  background-blend-mode: multiply;
   padding: 32px 24px;
   display: flex;
   justify-content: space-between;
@@ -171,7 +172,7 @@ html {
     width: 30%;
     padding: 20px 0;
     margin: 20px auto;
-    border-top: 1px solid #160c0c80;
+    border-top: 1px solid #7a7a7a80;
     border-bottom: 1px solid #7a7a7a80;
   }
 
@@ -269,9 +270,9 @@ html {
   z-index: 1;
   left: 0;
   top: 0;
-  width: 100%; 
+  width: 100%;
   height: 100%;
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
   padding: 0 24px;
   text-align: center;
   display: none;
@@ -297,20 +298,100 @@ html {
   }
 }
 
-
 .modal {
-  position: fixed;
+  position: absolute;
   z-index: 1;
   left: 0;
   top: 0;
-  width: 100%; 
-  height: 100%;
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-  padding: 0 24px;
-  text-align: center;
-  display: none;
+  width: 100%;
+  height: auto;
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+  padding: 80px 24px;
+  display: flex;
   justify-content: center;
   align-items: center;
+
+  &__content {
+    background-color: #fff;
+    padding: 36px 24px 0;
+    border-radius: 10px;
+
+    .icon-close {
+      display: inline-block;
+      height: 14px;
+      width: 14px;
+      background: url('../assets/svg/icon-close-modal.svg') center/contain
+        no-repeat;
+    }
+
+    .title {
+      margin: 0 0 20px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      font-size: 1.8rem;
+    }
+  }
+
+  &__cards {
+    padding: 25px 0;
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+
+    .modal__card {
+      &-content {
+        padding: 33px 24px;
+        border: 1px solid #d8d8d8;
+        border-radius: 8px;
+
+        .card__header {
+          display: flex;
+          gap: 16px;
+          align-items: center;
+
+          input[type=radio] {
+            height: 24px;
+            width: 24px;
+            // input.checked = false
+          }
+
+          .sub-title {
+            display: flex;
+            flex-direction: column;
+            font-size: 1.4rem;
+            line-height: 2.8rem;
+
+            span {
+              color: var(--moderate-cyan);
+            }
+          }
+        }
+
+        .paragraph {
+          margin: 20px 0 0;
+        }
+
+        .p-stats {
+          display: flex;
+          gap: 11px;
+          font-size: 1.8rem;
+          font-weight: 700;
+          margin: 20px 0 0;
+
+          span {
+            color: var(--dark-gray);
+            font-weight: 400;
+            font-size: 1.6rem;
+          }
+        }
+      }
+
+      &-pledge {
+        display: none;
+      }
+    }
+  }
 }
 
 .not-scroll {
