[ADD] menu mobile styles

--- a/crowdfunding-product-page-main/css/style.css
+++ b/crowdfunding-product-page-main/css/style.css
@@ -39,6 +39,7 @@ html {
           justify-content: space-between;
   max-width: 1100px;
   margin: 0 auto;
+  position: relative;
 }
 
 .header .nav .logo {
@@ -50,15 +51,67 @@ html {
   display: inline-block;
   height: 16px;
   width: 16px;
-  background: url("../assets/svg/icon-hamburger.svg");
+  background: url("../assets/svg/icon-hamburger.svg") center/cover no-repeat;
 }
 
 .header .nav .options-burger {
   display: none;
+  z-index: 1;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.4);
+  padding: 70px 24px 0;
+}
+
+.header .nav .options-burger ul {
+  width: 100%;
+  background: #fff;
+  border-radius: 10px;
+  height: 212px;
+  list-style: none;
+  padding: 0 24px;
+  font-size: 2rem;
+  font-weight: 500;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.header .nav .options-burger ul li:nth-child(2) {
+  border-top: 1px solid #ececec;
+  border-bottom: 1px solid #ececec;
+}
+
+.header .nav .options-burger ul li {
+  padding: 23px 0;
 }
 
 .header .nav .options {
   display: none;
+}
+
+.header .nav .options ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 32px;
+  list-style: none;
+  color: #fff;
+  font-size: 1.1rem;
+}
+
+.header .nav .options ul li {
+  cursor: pointer;
 }
 
 .main {
@@ -168,7 +221,7 @@ html {
 }
 
 .product__buttons .bookmark__container {
-  width: 173px;
+  width: 0;
   background: #f4f8f9;
   border-radius: 30px;
   height: 56px;
@@ -201,6 +254,7 @@ html {
 }
 
 .product__buttons .bookmark__container p {
+  display: none;
   color: var(--dark-gray);
   font-size: 1.5rem;
   font-weight: 700;
@@ -572,6 +626,18 @@ html {
   width: 115px;
   height: auto;
   padding: 12px 24px;
+}
+
+.active-options main {
+  position: fixed;
+}
+
+.active-options .header .nav .icon-burger {
+  background: url("../assets/svg/icon-close-menu.svg") center/cover no-repeat;
+}
+
+.active-options .header .nav .options-burger {
+  display: inline-block;
 }
 
 .show_modal .main {
