--- a/crowdfunding-product-page-main/css/style.css
+++ b/crowdfunding-product-page-main/css/style.css
@@ -219,47 +219,42 @@ html {
   max-width: 204px;
 }
 
-.product__buttons .bookmark__container {
-  width: 0;
-  background: #f4f8f9;
-  border-radius: 30px;
-  height: 56px;
-  cursor: pointer;
+.product__buttons .bookmark {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-}
-
-.product__buttons .bookmark__container .bookmark {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse;
+  gap: 8px;
+  background: #f4f8f9;
   border: none;
   border-radius: 30px;
+  cursor: pointer;
 }
 
-.product__buttons .bookmark__container .bookmark:hover {
+.product__buttons .bookmark:hover {
   opacity: 0.7;
 }
 
-.product__buttons .bookmark__container .bookmark span {
+.product__buttons .bookmark span {
   display: inline-block;
   height: 56px;
   width: 56px;
   background: url("../assets/svg/icon-bookmark.svg") center/contain no-repeat;
 }
 
-.product__buttons .bookmark__container p {
-  display: none;
-  color: var(--dark-gray);
-  font-size: 1.5rem;
-  font-weight: 700;
-  -ms-grid-column-align: center;
-      justify-self: center;
-  padding: 0 18px 0 0;
+.product__buttons .bookmark__container {
+  width: 0;
+  border-radius: 30px;
+  height: 56px;
 }
 
 .stats {
@@ -604,7 +599,6 @@ html {
 
 .modal__cards .modal__card-pledge .buttons .input-container input {
   width: 50px;
-  padding: 12px 24px 12px 0;
   border-radius: 30px;
   border: none;
   font-size: 1.4rem;
@@ -656,5 +650,34 @@ html {
 
 .modal__card.active-pledge .modal__card-pledge {
   display: inline-block;
+}
+
+.product__buttons.bookmark__active .bookmark span {
+  background: url(../assets/svg/icon-bookmark-chek.svg);
+}
+
+.product__buttons.bookmark__active .bookmark::before {
+  color: var(--moderate-cyan);
+}
+
+.modal__cards .active__modal {
+  border: 1px solid var(--moderate-cyan);
+  border-radius: 8px;
+}
+
+.modal__cards .active__modal .modal__card-pledge {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 /*# sourceMappingURL=style.css.map */
